Fix : Fix application.properties encoding
application.properties 한글 깨짐 현상 수정
File > Settings > Editor > File Encodings > Default encoding for properties files : UTF-8 로 변경

--- a/security/src/main/resources/application.properties
+++ b/security/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
-# message ?? ???
+# message 항목 보이기
 server.error.include-message=always
 
-# ????? console? color ????
+# 스프링부트 console 에 color 적용하기
 spring.output.ansi.enabled=always
