--- a/security/src/main/resources/application.yml
+++ b/security/src/main/resources/application.yml
@@ -15,6 +15,10 @@ spring:
     driver-class-name: org.h2.Driver
     username: sa
     password:
+  redis:
+    host: localhost
+    port: 6379
+    password: mobile00
 
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
